--- a/IW/UD1/anchofijoEJ.css
+++ b/IW/UD1/anchofijoEJ.css
@@ -1,25 +1,57 @@
 *{
     margin: 0;
     padding: 0;
-}
-body{
-    width: 960px;
-}
-header{
-    background-color: aqua;
-    height: 200px;
+    box-sizing: border-box;
 }
 .header-nav{
-    height: 100px;
-    background-color: blueviolet;
+    display: flex;
+    justify-content: flex-end;
+    background-color:black;
+    min-height: 8vh;
+    align-items: center;
+   
 }
 .header-nav__menu{
-
+    display: flex;
+    justify-content: space-around;
+    width: 30%;
 }
 .header-nav__menu-item{
-    display: inline;
-    margin: 10px;
+    list-style: none;
+}
+.header-nav__menu-item-link{
+   text-decoration:none;
+   color:rgba(255, 255, 255, 0.849);
+   font-family: 'Yanone Kaffeesatz', sans-serif;
+   font-size: 1.35em;
+   position: relative;
+}
+.header-nav__menu-item-link::before{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(to right,#000000, #f3e305, #000000);
+    z-index: 1;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.5s ease-in-out;
+}
+.header-nav__menu-item-link:hover::before{
+    transform:scaleX(1);
+}
+main{
+    display: flex;
+    width: 100%;
+
 }
 .main-content{
-    display: inline;
+    display: flex;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+    justify-content: space-around;
+    align-items: center;
+    padding-left: 5%;
+    padding-right: 5%;
 }
